feat: JPA/Hibernate integration with SQL usages